fixed the css flickering for links bug

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,9 +28,10 @@
     justify-content: center;
     border-radius: 12px;
     margin: 2px;
+    text-decoration: none;
 }
 
-.button a:visited {
+.black-button {
     color: black;
 }
 
